showing all quests

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -6,8 +6,10 @@
   </ion-header>
 
   <ion-content>
-    <ion-list>
+    <ion-list class="menu-list">
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+        <!-- <ion-icon name="menu-quest" item-start></ion-icon> -->
+        <img class="menu-icons" src="./assets/imgs/menu-icons/menu-quest.png">
         {{p.title}}
       </button>
     </ion-list>
